force-app/main/default/objects/deltatest__c/deltatest__c.object-meta.xml
<CustomObject>
    <label>deltatest</label>
    <nameField>
        <label>deltatest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>deltatest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>