force-app/main/default/objects/deltatest__c/fields/test10__c.field-meta.xml
<CustomField>
    <fullName>test10__c</fullName>
    <label>test10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>