force-app/main/default/objects/deltatest__c/fields/test12__c.field-meta.xml
<CustomField>
    <fullName>test12__c</fullName>
    <label>test12</label>
    <type>TextArea</type>
</CustomField>