force-app/main/default/objects/deltatest__c/fields/test1__c.field-meta.xml
<CustomField>
    <fullName>test1__c</fullName>
    <label>test1</label>
    <length>8</length>
    <type>Text</type>
</CustomField>